--- a/app.json
+++ b/app.json
@@ -1,4 +1,11 @@
 {
   "name": "NativeSago",
-  "displayName": "NativeSago"
+  "displayName": "NativeSago",
+  "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "cover"
+    }
 }
