--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,14 @@ target 'NativeSago' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-fetch-blob', :path => '../node_modules/react-native-fetch-blob'
+
+  pod 'react-native-zebra-bluetooth-printer', :path => '../node_modules/react-native-zebra-bluetooth-printer'
+
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
+
   target 'NativeSagoTests' do
     inherit! :search_paths
     # Pods for testing
