--- a/package.json
+++ b/package.json
@@ -14,24 +14,37 @@
     "@react-native-community/netinfo": "^5.6.2",
     "@redux-offline/redux-offline": "2.5.2-native.0",
     "axios": "^0.19.2",
+    "expo-location": "^8.1.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.12",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-localize-redux": "^3.5.3",
     "react-native": "0.61.5",
+    "react-native-cacheable-image": "^2.1.0",
+    "react-native-cached-image": "^1.4.3",
+    "react-native-calculator": "^0.5.2",
     "react-native-elements": "^1.1.0",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-picker": "^2.3.1",
     "react-native-localization": "^2.1.6",
     "react-native-location": "^2.5.0",
+    "react-native-maps": "^0.27.1",
     "react-native-popup-menu": "^0.15.7",
+    "react-native-print": "^0.6.0",
     "react-native-reanimated": "^1.7.0",
+    "react-native-render-html": "^4.2.0",
+    "react-native-restart": "^0.0.14",
     "react-native-screens": "^2.4.0",
     "react-native-settings": "^0.2.3",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-unimodules": "^0.8.1",
     "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
-    "react-native-zebra-bt-printer": "0.0.14",
+    "react-native-webview": "^9.0.1",
+    "react-native-zebra-bluetooth-printer": "^1.0.6",
     "react-navigation": "^3.9.1",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
